fix invisible links in sidebar and content

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,15 +10,16 @@
 
   .sidebar {
     width: 300px;
-    height: 100%;
+    height: 100vh;
+    padding-bottom: 60px;
     overflow: scroll;
     border-right: 1px solid #ccc;
   }
 
   .content {
     width: 500px;
-    height: 100%;
-    padding: 0 15px 25px;
+    height: 100vh;
+    padding: 0 15px 60px;
     overflow: scroll;
   }
 
